# ntc-actix

./: Cargo.toml  README.md
src/: main.rs
src/config/: config.env  config.rs  mod.rs
src/db/: db.rs  mod.rs
src/middlewares/: auth.rs  mod.rs
src/models/: mod.rs  response.rs  user.rs
src/repositories/: mod.rs
src/repositories/user_repository/: mod.rs  routes.rs  user_repository.rs
