[package]
name = "ntc-actix"
version = "0.1.0"
authors = ["congnghia0609 <congnghia0609@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-rt = "1.1.1"
envfile = "0.2.1"
#mongodb = "1.1.1"
lazy_static = "1.4.0"
serde = "1.0.118"
serde_json = "1.0.61"
bson = "1.1.0"
futures = "0.3.8"
chrono = "0.4.19"
rust-crypto = "0.2.36"
jsonwebtoken = "7.2.0"

[dependencies.mongodb]
version = "1.1.1"
default-features = false
features = ["sync"]
